<resources>
    <string name="app_name">Inventorty App</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="category_product">Product:</string>
    <string name="category_id">ID: </string>
    <string name="category_kind">Category Product:</string>
    <string name="category_Price">Price: </string>
    <string name="category_Units">Units: </string>
    <string name="category_Photo">Photo: </string>
    <string name="product_name">Product Name: "</string>
    <string name="product_Bar_Code">Bar Code Number: "</string>
    <string name="product_Price">Price: "</string>
    <string name="product_Units">Units"</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="category_unknown">Unknown</string>
    <string name="category_pets">Pets</string>
    <string name="category_cleaners">Cleaners</string>
    <string name="category_food">Food</string>
    <string name="category_hygiene">Hygiene</string>
    <string name="category_fruit">Fruit</string>
    <string name="category_fish">Fish</string>
    <string name="editor_activity_title_new_item">Add a new Item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="editor_insert_item_failed">Inserting item failed</string>
    <string name="editor_insert_item_successful">Item saved succesfuly</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete all entries</string>
    <string name="entry_action_delete">Delete this entry</string>
    <string name="editor_delete_item_failed">Delete item failed¡¡¡¡¡</string>
    <string name="editor_delete_item_ok">Delete item was succesful</string>
    <string name="delete_dialog_msg">Delete this Item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_sendmail">Send Order Email</string>
    <string name="orderSubject">Order for reference number: </string>
    <string name="genericMessageBeggining">Hello this is an automatic email for the purchasing of the product: </string>
    <string name="genericMessageMiddle">Please, prepare a quote for the following units: (XXXXXXXX)</string>
    <string name="genericMessageEnd">Before sending the product please send us a confirmation email with the final price. Regards</string>
    <string name="email">Email</string>
    <string name="category_Email">Em@il</string>
    <string name="category_suplier">Suplier</string>
    <string name="name">Name</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="email_message_greetings">\\n\\nThank You for Your Help!</string>
    <string name="email_message_units">\\nProduct Quantity:</string>
    <string name="email_message_name">Product reference :</string>
</resources>
