<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="udacity.com.inventortyapp.EditorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/edit_activity_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/product_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/colorSecondaryText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_id" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/edit_bar_code"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/product_Bar_Code"
                    android:inputType="number"
                    android:textColor="@color/colorSecondaryText" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_kind" />

            <LinearLayout
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <Spinner
                    android:id="@+id/spinner_zone"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_Price" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/product_Price"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorSecondaryText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_Units" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/units"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/product_Units"
                    android:inputType="number"
                    android:textColor="@color/colorSecondaryText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_suplier" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/suplier"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/colorSecondaryText" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_Email" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/email"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorSecondaryText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <ImageButton
                    android:layout_width="100dp"
                    android:id="@+id/action_sendmail"
                    android:background="@drawable/shopping_cart"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/shopping_cart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="15dp">

                <ImageButton
                    android:id="@+id/photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/photo_camera" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/what_you_need_know_managing" />

            <TextView
                android:id="@+id/image_uri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_Photo"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>



